<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_270sdp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_centerHorizontal="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/select_the_icon_for_this_conservation"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp" />
            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/currentIcon"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_65sdp"
                android:contentDescription="@string/currentTheme"
                android:background="@drawable/like"
                app:riv_oval="true"
                android:scaleType="centerCrop"/>
            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignTop="@id/currentIcon"
                android:layout_marginTop="@dimen/_50sdp"
                android:background="@color/hintColor" />
            <ImageView
                android:id="@+id/iconLike"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignTop="@id/line"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:contentDescription="@string/like"
                android:background="@drawable/like"
                />
            <ImageView
                android:id="@+id/iconSmile"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignTop="@id/line"
                android:layout_alignStart="@id/iconLike"
                android:layout_marginStart="@dimen/_42sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:contentDescription="@string/like"
                android:background="@drawable/smile"
                />
            <ImageView
                android:id="@+id/iconSmileNotFun"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignTop="@id/line"
                android:layout_alignStart="@id/iconSmile"
                android:layout_marginStart="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:contentDescription="@string/like"
                android:background="@drawable/smile_not_fun"
                />
            <ImageView
                android:id="@+id/iconSad"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignTop="@id/line"
                android:layout_alignStart="@id/iconSmileNotFun"
                android:layout_marginStart="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:contentDescription="@string/like"
                android:background="@drawable/sad"
                />
            <ImageView
                android:id="@+id/iconConfused"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignTop="@id/line"
                android:layout_alignStart="@id/iconSad"
                android:layout_marginStart="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:contentDescription="@string/like"
                android:background="@drawable/confused"
                />
            <ImageView
                android:id="@+id/iconEmoji"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignTop="@id/line"
                android:layout_alignStart="@id/iconConfused"
                android:layout_marginStart="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:contentDescription="@string/like"
                android:background="@drawable/emoji"
                />
            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignTop="@id/line"
                android:layout_marginTop="@dimen/_55sdp"
                android:background="@color/hintColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignTop="@+id/line2"
                android:layout_marginTop="@dimen/_1sdp"
                >
                <Button
                    android:id="@+id/btnSelectIcon"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_weight="0.4"
                    android:text="@string/btnSelect"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="#1A5FD3"
                    android:fontFamily="@font/poppins_medium"
                    android:background="@color/white"/>
                <View
                    android:layout_width="1dp"
                    android:layout_height="@dimen/_50sdp"
                    android:background="@color/hintColor"/>

                <Button
                    android:id="@+id/btnCancelIcon"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_weight="0.4"
                    android:background="@color/white"
                    android:text="@string/btnCancel"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="#DF1818"/>
            </LinearLayout>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>